feat: update app configuration and enhance index page with SEO and dynamic content

--- a/content/0.index.yml
+++ b/content/0.index.yml
@@ -9,10 +9,12 @@ hero:
     - label: Let's talk
       icon: i-lucide-arrow-right
       trailing: true
+      variant: solid
+      color: warning
       to: /contact
       size: xl
     - label: My projects
-      icon: i-simple-icons-github
+      icon: i-lucide-briefcase
       size: xl
       color: neutral
       variant: subtle
