feat: Implement a comprehensive About page, introduce page transitions, and update general styling and assets.

--- a/content/0.index.yml
+++ b/content/0.index.yml
@@ -1,4 +1,4 @@
-title: "Hello, I'm"
+title: "Hello, I'm Marcellinus Yovian"
 description: "I'm a passionate Software Engineer specialized in building exceptional digital experiences. Currently focused on building accessible, human-centered products."
 
 # Data untuk animasi ketik (Typing Effect)
