--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify-json/simple-icons": "^1.2.58",
     "@nuxt/content": "^3.8.2",
     "@nuxt/ui": "^4.1.0",
+    "@nuxtjs/supabase": "^2.0.1",
     "@unovis/ts": "^1.6.1",
     "@unovis/vue": "^1.6.1",
     "@vueuse/motion": "^3.0.3",
