--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@nuxt/eslint": "^1.10.0",
     "eslint": "^9.39.1",
+    "supabase": "^2.58.5",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.3"
   },
