--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "typecheck": "nuxt typecheck"
+    "typecheck": "nuxt typecheck",
+    "db:types": "npx supabase gen types typescript --linked > app/types/database.d.ts"
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.73",
