--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "better-sqlite3": "^12.4.1",
     "date-fns": "^4.1.0",
     "nuxt": "^4.2.1",
+    "nuxt-email-renderer": "2.1.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.10.0",
     "eslint": "^9.39.1",
+    "nodemailer": "^7.0.11",
+    "nuxt-nodemailer": "^1.1.4",
     "supabase": "^2.58.5",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.3"
